  * Fixed wrong half-move notation in Little Rook Chess (issue 137)
  * Support for ST7567, Pax Instruments GLCD Shield (issue 138)
  * Support for NT7534 (issue 143)
  * Support for SSD1327, Seeedstudio OLED (issue 145)
  * Support for SSD1305 (issue 146)
  * Support for DOGM132 (issue 147)
  * Fixed a bug in the draw pixel procedure which appears in full buffer mode,
    if the display width is not a multiple of 8 (issue 148)
  * Added XOR mode (setDrawColor 2, issue 56)
2017-01-15	v2.12.6	  olikraus@gmail.com
  * Support for SSD1309 (issue 113)
  * Enabled U8G2_HVLINE_SPEED_OPTIMIZATION (not sure why this was disabled)
  * Improved speed for ST7920 (up to 40%, issue 151)
  * Support for IST3020 (issue 153)
2017-02-07	v2.13.6	  olikraus@gmail.com
  * Support for ST7588 (issue 154)
  * ESP8266: Avoid RAM copy of the fonts (issue 159)
  * Support for SSD1607 (issue 133)
  * Support for hardware pin remapping on the ESP8266 (issue 158)
  * Bugfix for the KS0108 support (issue 168)
  * More fonts: https://github.com/olikraus/u8g2/wiki/fntgrpnbp (issue 174)
2017-03-11	v2.14.7	  olikraus@gmail.com
  * Bugfix: setFont does no longer resets the reference position (issue 195)
  * Support for ST7565 NHD C12864 (issue 186)
  * Support for SSD1329 128x96 OLED (issue 208)
  * Support for LC7981 240x128 (issue 193)
  * Performance improvement for the ST7920 (issue 200)
 2017-05-22	v2.15.2	  olikraus@gmail.com
  * Added setBitmapMode (pull request 220)
     Warning: Default behavior of drawXBM has changed in this release.
  * Increased SPI speed to 8MHz for SSD1306, SH1106 and SSD1322 (issue 215)
  * Added some more examples (issue 216)
  * Added Urdu, Bengali, Hebrew and Polish language fonts (issues 221, 246 and 266)
  * Added more examples (issue 216)
  * Updated code for NHD C12864 (issues 219 and 241)
  * Improved speed for HW SPI with SSD13xx OLEDs (issue 215)
2017-xx-xx	v2.16.x	
  * Fonts u8g2_font_unifont_t_korean1, u8g2_font_unifont_t_korean2 (issue 266)
  
  